# fav-book

./: .dockerignore  .env.production.template  .gitignore  DEPLOYMENT_CHECKLIST.md  ENV_SETUP.md  ERROR_HANDLING_IMPLEMENTATION.md  FEATURE_FLAGS.md  LOGGING_SOLUTION.md  MAGIC_LINK_DEBUG.md  MONITORING.md  MONITORING_IMPLEMENTATION.md  README.md  biome.json  bts.jsonc  check-logs.sh  docker-compose.prod.yml  ecosystem.config.js  llms-full.txt  nginx.conf.example  package.json  test-import-validation.js  turbo.json
.github/workflows/: deploy.yml
apps/core/: .gitignore  package.json  tsconfig.json
apps/crawler/: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/crawler/scripts/: dev.sh
apps/crawler/src/: __init__.py  agent.py  config.py  crawler.py  main.py  models.py
apps/extension/: DISTRIBUTION.md  README.md  (+10 more)
apps/twitor/: .dockerignore  .env.example  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  TURBO_INTEGRATION.md  WORKSPACE_INTEGRATION_SUMMARY.md  alembic.ini  docker-compose.valkey.yml  package.json  pyproject.toml
apps/twitor/alembic/: env.py
apps/twitor/alembic/versions/: bec1699553ed_simplify_schema_remove_summarization.py  fc370d8b87e9_initial_schema.py
apps/twitor/docs/: AI_SUMMARIZATION_INTEGRATION.md  CHECKPOINT_MANAGEMENT.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md
apps/twitor/migrations/: 001_create_crawler_schema.sql  README.md
apps/twitor/scripts/: dev.sh  migrate.sh  run_migration.sh  verify_schema.sh
apps/twitor/src/: __init__.py  bookmark_processor.py  checkpoint_manager.py  config.py  crawl_service.py  database.py  error_handler.py  main.py  models.py  progress_streamer.py  queue_manager.py  schemas.py  twitter_client.py
apps/twitor/src/api/: __init__.py  schemas.py
apps/twitor/src/api/routes/: crawl.py  health.py
apps/twitor/src/core/: config.py
apps/twitor/src/core/database/: __init__.py  connection.py  models.py
apps/twitor/src/services/: bookmark_processor.py  checkpoint_manager.py  crawl_service.py  error_handler.py  progress_streamer.py  queue_manager.py
apps/twitor/src/twitter/: __init__.py  client.py
apps/twitor/tests/: __init__.py  test_bookmark_processor.py  test_checkpoint_manager.py  test_main.py  test_models.py  test_schemas.py
deployment/: .env.development.example  .env.production.example  .gitkeep  README.md
docs/: API.md  BOOKMARK_FILTERING.md  DEVELOPER_GUIDE_FILTERING.md  FILTER_OPERATORS_REFERENCE.md  URL_IMPORT_GUIDE.md  USER_GUIDE.md
scripts/: README.md  RESTATE_INFRASTRUCTURE.md  linkedin-crawler.js  manage-restate.sh  twitter-crawler.js
(+239 files in other folders)
